--- a/index.html
+++ b/index.html
@@ -48,8 +48,11 @@
     </video>
          <p>Hey, I am Laraib(La-raib).
           <br>
-          I create websites using JS,CSS and HTML,learning React also.
-          <button class="resume"> My Resume</button>
+          I create websites using JS,CSS and HTML,improving skills in React also. 
+          <button class="resume">
+            <a href="work.images/laraib_malik_-_Frontend_Developer-2.pdf" target="_blank" type="download">
+         My Resume</button>
+        </a>
           <button onclick="window.location.href='#middle';">
             My Work
           </button>
