--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         </a>
         <div class="navbar-links">
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="#meh">Home</a></li>
+            <li><a href="#middle">Work</a></li>
             <li><a href="#">Contact</a>
               <ul class="dropdown">
                 <li><a href="https://github.com/mlaraibb"target="_blank" >GitHub</a></li>
@@ -41,7 +41,7 @@
       </nav>
     
    <!--Starting Page-->
-      <section class="meh">
+      <section class="meh" id="meh">
       <video playsinline autoplay muted loop poster="my-static-image.jpg">
         <source src="IMG/pexels-mikhail-nilov-7534244.mp4" type="video/webm">
         Your browser does not support the video tag.
