--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
              <img src="work.images/Screenshot 2023-01-13 at 08-01-21 Portfolio Laraib Malik.png"  alt= "my-portfolio" />
              <div class="image-overlay">
                <div class="image-title">
-                 <a href="https://mlaraibb.github.io/Tip-Calculator/" target="_blank">My Portfolio</a>
+                 <a href="https://mlaraibb.github.io/LaraibPortfolio/" target="_blank">My Portfolio</a>
                </div>
                <P class="image-description">
-                 <a href="https://github.com/mlaraibb/Tip-Calculator" target="_blank">Source Code</a>
+                 <a href="https://github.com/mlaraibb/LaraibPortfolio" target="_blank">Source Code</a>
                </P>
              </div>
            </div>
