--- a/index.html
+++ b/index.html
@@ -49,13 +49,14 @@
          <p>Hey, I am Laraib(La-raib).
           <br>
           I create websites using JS,CSS and HTML,improving skills in React also. 
-          <button class="resume">
+          <div class="resume">
             <a href="work.images/laraib_malik_-_Frontend_Developer-2.pdf" target="_blank" type="download">
-         My Resume</button>
+         My Resume
         </a>
           <button onclick="window.location.href='#middle';">
             My Work
           </button>
+        </div>
          </p>
      </section> 
     
@@ -135,7 +136,7 @@
   <!--footer-->
   <footer>
     <div class="footer">
-     <P>Laraib 2023</P>
+     <P>Laraib 2022</P>
    <a href="https://www.linkedin.com/in/laryebmalik/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
    <a href="https://github.com/mlaraibb"target="_blank" ><i class="fa-brands fa-github"></i>
    </div>
