--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     
    <!--Starting Page-->
       <section class="meh" id="meh">
-      <video playsinline autoplay muted loop poster="my-static-image.jpg">
+      <video autoplay playsinline  muted loop poster="my-static-image.jpg">
         <source src="IMG/pexels-mikhail-nilov-7534244.mp4" type="video/webm">
         Your browser does not support the video tag.
     </video>
